[project]
name = "agrobridge-openenv"
version = "0.1.0"
description = "AgroBridge OpenEnv RL environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "torch",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
env_name = "agrobridge-openenv"
